[tool.poetry]
name = "youtube-clone"
version = "0.1.0"
description = "youtube-clone-project"
authors = ["grace287 <chenlucia287@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
